<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_new_order"
            android:title="@string/NuevoPedido" />
        <item
            android:id="@+id/nav_cargue"
            android:title="@string/porCargar" />
        <item
            android:id="@+id/nav_add_product"
            android:title="@string/NuevoProducto" />
        <item
            android:id="@+id/nav_update_product"
            android:title="@string/btnUpdateProduct" />
    </group>

</menu>
