<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:alignmentMode="alignMargins"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/txtCod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/Codigo"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/Descripcion"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtPrecio_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/precio"
            android:inputType="number" />

        <Spinner
            android:id="@+id/spinSelectEmbaje"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:tooltipText="@string/Embalaje"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:ems="10" />

        <EditText
            android:id="@+id/txtIvaUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/IVA"
            android:inputType="number" />

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:onClick="Actualizar"
            android:text="@string/update" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>