<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bgapps"
    tools:context=".AddProduct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_alignParentRight="true"
                android:layout_height="100dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/NuevoProducto"
                app:srcCompat="@drawable/producto" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:text="@string/NuevoProducto"
                android:id="@+id/txtDashboard" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:padding="6dp"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/txtCodProd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:inputType="number"
                android:hint="@string/Codigo" />

            <EditText
                android:id="@+id/txtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:inputType="text"
                android:hint="@string/Descripcion" />

            <EditText
                android:id="@+id/txtprecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:inputType="number"
                android:hint="@string/precio" />

            <Spinner
                android:id="@+id/spinSelectEmbaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:ems="10" />

            <EditText
                android:id="@+id/txtIva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:inputType="number"
                android:hint="@string/IVA" />

            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:onClick="onClick"
                android:text="@string/GuardarPedido" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>